@@ -133,7 +133,7 @@
 		</message>
 		<message>
 			<source>Guest Network Adapters</source>
-			<translation>Adaptador de red huésped</translation>
+			<translation>Adaptadores de red huésped</translation>
 		</message>
 		<message>
 			<source>Up</source>
